--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -1,345 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Briefen.me</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    :root {
-      --primary-600: #0284c7;
-      --primary-700: #0369a1;
-      --accent-500: #8b5cf6;
-      --success-500: #22c55e;
-      --error-500: #ef4444;
-      --gray-50: #f9fafb;
-      --gray-100: #f3f4f6;
-      --gray-200: #e5e7eb;
-      --gray-600: #4b5563;
-      --gray-900: #111827;
-    }
-
-    body {
-      width: 380px;
-      min-height: 400px;
-      margin: 0;
-      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #fafbfc;
-      color: var(--gray-900);
-    }
-
-    .header {
-      background: white;
-      padding: 20px;
-      text-align: center;
-      border-bottom: 2px solid var(--primary-600);
-    }
-
-    .header h1 {
-      margin: 0 0 4px 0;
-      font-size: 22px;
-      font-weight: 700;
-      color: var(--primary-600);
-    }
-
-    .header p {
-      margin: 0;
-      font-size: 12px;
-      color: var(--gray-600);
-      font-weight: 500;
-      letter-spacing: 0.5px;
-      text-transform: uppercase;
-    }
-
-    .content {
-      background: white;
-      padding: 20px;
-      min-height: 340px;
-    }
-
-    .container {
-      display: none;
-    }
-
-    .container.active {
-      display: block;
-    }
-
-    .loading {
-      text-align: center;
-      padding: 40px 20px;
-    }
-
-    .spinner {
-      width: 48px;
-      height: 48px;
-      margin: 0 auto 20px;
-      border: 4px solid var(--gray-100);
-      border-top: 4px solid var(--primary-600);
-      border-radius: 50%;
-      animation: spin 0.8s linear infinite;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    .status {
-      font-size: 14px;
-      color: var(--gray-600);
-      line-height: 1.5;
-    }
-
-    .slug-options {
-      margin-bottom: 20px;
-    }
-
-    .slug-options-label {
-      font-size: 13px;
-      font-weight: 600;
-      color: var(--gray-600);
-      margin-bottom: 12px;
-      display: block;
-    }
-
-    .slug-option {
-      padding: 14px 16px;
-      background: var(--gray-50);
-      border: 2px solid var(--gray-200);
-      border-radius: 8px;
-      margin-bottom: 10px;
-      cursor: pointer;
-      font-size: 14px;
-      font-family: 'Monaco', 'Courier New', monospace;
-      transition: all 0.2s ease;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .slug-option::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 4px;
-      height: 100%;
-      background: transparent;
-      transition: background 0.2s ease;
-    }
-
-    .slug-option:hover {
-      border-color: var(--primary-600);
-      background: #e0f2fe;
-      transform: translateX(4px);
-    }
-
-    .slug-option:hover::before {
-      background: var(--primary-600);
-    }
-
-    .slug-option.selected {
-      border-color: var(--primary-600);
-      background: #e0f2fe;
-      font-weight: 600;
-      color: var(--primary-700);
-    }
-
-    .slug-option.selected::before {
-      background: var(--primary-600);
-    }
-
-    .result-box {
-      background: #f0f9ff;
-      padding: 16px;
-      border-radius: 12px;
-      margin-bottom: 16px;
-      border: 1px solid #bae6fd;
-    }
-
-    .result-box label {
-      font-size: 11px;
-      font-weight: 700;
-      color: var(--primary-600);
-      display: block;
-      margin-bottom: 8px;
-      text-transform: uppercase;
-      letter-spacing: 0.8px;
-    }
-
-    .url-display {
-      display: flex;
-      gap: 8px;
-      align-items: center;
-    }
-
-    .url-text {
-      flex: 1;
-      padding: 10px 12px;
-      background: white;
-      border: 1px solid #e5e7eb;
-      border-radius: 6px;
-      font-size: 13px;
-      word-break: break-all;
-      font-family: 'Monaco', 'Courier New', monospace;
-      color: #1a1a1a;
-    }
-
-    .btn {
-      padding: 10px 18px;
-      border: none;
-      border-radius: 8px;
-      font-size: 14px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      font-family: inherit;
-    }
-
-    .btn:disabled {
-      opacity: 0.5;
-      cursor: not-allowed;
-    }
-
-    .btn-primary {
-      background: var(--primary-600);
-      color: white;
-      box-shadow: 0 2px 8px rgba(2, 132, 199, 0.3);
-    }
-
-    .btn-primary:hover:not(:disabled) {
-      background: var(--primary-700);
-      transform: translateY(-1px);
-      box-shadow: 0 4px 12px rgba(2, 132, 199, 0.4);
-    }
-
-    .btn-primary:active:not(:disabled) {
-      transform: translateY(0);
-    }
-
-    .btn-secondary {
-      background: var(--gray-100);
-      color: var(--gray-600);
-    }
-
-    .btn-secondary:hover {
-      background: var(--gray-200);
-    }
-
-    .btn-copy {
-      padding: 10px 16px;
-      white-space: nowrap;
-      min-width: 70px;
-    }
-
-    .btn-copy.copied {
-      background: var(--success-500);
-      color: white;
-    }
-
-    .error {
-      background: #fef2f2;
-      border: 1px solid #fecaca;
-      color: #dc2626;
-      padding: 16px;
-      border-radius: 12px;
-      font-size: 14px;
-      margin-bottom: 16px;
-      line-height: 1.5;
-    }
-
-    .actions {
-      display: flex;
-      gap: 10px;
-      justify-content: flex-end;
-      margin-top: 16px;
-    }
-
-    .success-icon {
-      width: 64px;
-      height: 64px;
-      margin: 0 auto 16px;
-      background: var(--success-500);
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 32px;
-      color: white;
-      animation: scaleIn 0.3s ease;
-    }
-
-    @keyframes scaleIn {
-      0% {
-        transform: scale(0);
-        opacity: 0;
-      }
-      50% {
-        transform: scale(1.1);
-      }
-      100% {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-
-    .form-group {
-      margin-bottom: 16px;
-    }
-
-    .form-label {
-      display: block;
-      font-size: 13px;
-      font-weight: 600;
-      margin-bottom: 8px;
-      color: var(--gray-900);
-    }
-
-    .form-input {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid var(--gray-200);
-      border-radius: 6px;
-      font-size: 14px;
-      font-family: inherit;
-    }
-
-    .form-input:focus {
-      outline: none;
-      border-color: var(--primary-600);
-    }
-
-    .btn-dashboard {
-      background: var(--accent-500);
-      color: white;
-      width: 100%;
-      margin-top: 12px;
-    }
-
-    .btn-dashboard:hover {
-      background: #7c3aed;
-    }
-  </style>
+  <link rel="stylesheet" href="popup.css">
 </head>
 <body>
   <div class="header">
-    <h1>Briefen.me</h1>
-    <p>AI-Powered URL Shortener</p>
+    <div class="header-content">
+      <div>
+        <h1>Briefen.me</h1>
+        <p>AI-Powered URL Shortener</p>
+      </div>
+      <button type="button" class="btn-logout hidden" id="logout-btn" title="Logout">
+        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M6 14H3.33333C2.97971 14 2.64057 13.8595 2.39052 13.6095C2.14048 13.3594 2 13.0203 2 12.6667V3.33333C2 2.97971 2.14048 2.64057 2.39052 2.39052C2.64057 2.14048 2.97971 2 3.33333 2H6M10.6667 11.3333L14 8M14 8L10.6667 4.66667M14 8H6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </button>
+    </div>
   </div>
 
   <div class="content">
     <div id="login" class="container">
       <div class="form-group">
-        <label class="form-label">Email</label>
-        <input type="email" id="email" class="form-input">
+        <label class="form-label" for="email">Email</label>
+        <input type="email" id="email" class="form-input" aria-label="Email">
       </div>
       <div class="form-group">
-        <label class="form-label">Password</label>
-        <input type="password" id="password" class="form-input">
+        <label class="form-label" for="password">Password</label>
+        <input type="password" id="password" class="form-input" aria-label="Password">
       </div>
-      <div id="login-error" class="error" style="display: none;"></div>
+      <div id="login-error" class="error hidden"></div>
       <div class="actions">
         <button type="button" class="btn btn-secondary" id="guest-btn">Continue as Guest</button>
         <button type="button" class="btn btn-primary" id="login-btn">Login</button>
